--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,5 +1,31 @@
 <%= form_with(model: task, local: true) do |f| %>
 
+
+<% if task.errors.any? %>
+
+    <div id="error_explanation">
+      <h2>
+<%= pluralize(task.errors.count, "error") %>
+ prohibited this task from being saved:</h2>
+
+      <ul>
+        
+<% task.errors.full_messages.each do |msg| %>
+
+          <li>
+<%= msg %>
+</li>
+        
+<% end %>
+
+      </ul>
+    </div>
+  
+<% end %>
+<%= f.label :status, "属性" %>
+
+<%= f.text_field :status %>
+
 <%= f.label :content, "タスク" %>
 
 <%= f.text_field :content %>
